--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -13,7 +13,7 @@ h1{
     font-family: Josefin Sans,sans-serif;
     font-size: 2rem;
     letter-spacing: 1.2rem;
-    text-shadow: 2 2 blue;
+    text-shadow: 1px 1px 2px black;
     border-bottom: 3px solid rgb(115, 115, 114);
 }
 
